--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.8.2",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1"
     }
