--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.8.2",
         "jquery": "^3.6.0",
+        "mapbox-gl": "^2.8.2",
         "popper.js": "^1.16.1"
     }
 }
