--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,7 +26,7 @@ security:
                 max_attempts: 3
                 interval: '15 minutes'
             logout:
-                path: logout
+                path: app_logout
                 target: home
 
             # activate different ways to authenticate
