--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,8 +38,13 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/power, roles: ROLE_ADMIN }
+        - { path: ^/cat, roles: ROLE_USER }
+        - { path: ^/found, roles: ROLE_USER }
+        - { path: ^/strorereports, roles: ROLE_USER }
+        - { path: ^/deletereports, roles: ROLE_USER }
+        - { path: ^/logout, roles: ROLE_USER }
+        - { path: ^/place, roles: ROLE_USER }
 
 when@test:
     security:
