--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.1.3",
+        "bootstrap-datepicker": "^1.9.0",
         "bootstrap-icons": "^1.8.3",
         "jquery": "^3.6.0",
         "mapbox-gl": "^2.8.2",
